changed font, colors and content templates

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,500,600');
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Alegreya:400');
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:400');
 @import './common.scss';
 
 :root,
