--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,8 +1,8 @@
 $white: #ffffff;
 $gray: #a0a0a0;
-$black: #33332d;
+$black: #212322;
 $main: #e1e1e1;
-$main--dark: #212121;
+$main--dark: #161727;
 
 $violet: #b795f3;
 $green: #aeffda;
@@ -16,8 +16,8 @@ $light-blue: #82d2f7;
 $light-violet: #b2bbf0;
 
 //Font families
-$font-body: 'IBM Plex Mono', monospace;
-$font-heading: 'IBM Plex Sans', monospace;
+$font-body: 'Alegreya Sans', monospace;
+$font-heading: 'Alegreya', monospace;
 
 //Font weights
 $font-weight-regular: 400;
