--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -19,6 +19,10 @@
     }
   }
 
+  strong {
+    background-color: var(--color-pre-background);
+  }
+
   p:not(:last-of-type) {
     margin-bottom: $vertical-spacing;
   }
