Flipped fonts for sans and alegreya

--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -16,8 +16,8 @@ $light-blue: #82d2f7;
 $light-violet: #b2bbf0;
 
 //Font families
-$font-body: 'Alegreya Sans', monospace;
-$font-heading: 'Alegreya', monospace;
+$font-body: 'Alegreya', monospace;
+$font-heading: 'Alegreya Sans', monospace;
 
 //Font weights
 $font-weight-regular: 400;
