Changed font to Gelasio

--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -17,7 +17,7 @@ $light-violet: #b2bbf0;
 
 //Font families
 $font-body: 'Alegreya', monospace;
-$font-heading: 'Alegreya Sans', monospace;
+$font-heading: 'Gelasio', monospace;
 
 //Font weights
 $font-weight-regular: 400;
