--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Gelasio:400');
 @import './common.scss';
 
 :root,
