--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -228,7 +228,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Alegreya Sans', monospace;
+  font-family: 'Alegreya', monospace;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -244,7 +244,7 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Alegreya Sans', monospace;
+  font-family: 'Alegreya', monospace;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -260,7 +260,7 @@ h3 {
   margin-top: 2rem;
   margin-bottom: -0.5rem;
   color: inherit;
-  font-family: 'Alegreya Sans', monospace;
+  font-family: 'Alegreya', monospace;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.75rem;
@@ -276,7 +276,7 @@ h4 {
   margin-top: 2rem;
   margin-bottom: -1rem;
   color: inherit;
-  font-family: 'Alegreya Sans', monospace;
+  font-family: 'Alegreya', monospace;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.25rem;
@@ -292,7 +292,7 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Alegreya Sans', monospace;
+  font-family: 'Alegreya', monospace;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
@@ -308,7 +308,7 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Alegreya Sans', monospace;
+  font-family: 'Alegreya', monospace;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
