--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -39,12 +39,13 @@
   }
 
   table {
+    font-family: $font-heading;
     @include from($tablet) {
       margin-left: 1rem;
     }
   }
 
-  ul {
+  ul, ol {
     font-family: $font-heading;
 
     @include from($tablet) {
