did the font changes

--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -18,6 +18,7 @@ $light-violet: #b2bbf0;
 //Font families
 $font-body: 'Alegreya', monospace;
 $font-heading: 'Noto Sans', monospace;
+$font-heading--light: 'Gelasio', monospace;
 
 //Font weights
 $font-weight-regular: 400;
