--- a/src/components/ScrollNavigation/ScrollNavigation.scss
+++ b/src/components/ScrollNavigation/ScrollNavigation.scss
@@ -38,6 +38,9 @@
   li {
     list-style-type: none;
     font-family: $font-heading;
+    html[data-theme='light'] & {
+        font-family: $font-heading--light;
+    }
 
     &:hover,
     &.selected {
