--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@300;600&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:400');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300');
+@import url('https://fonts.googleapis.com/css?family=Gelasio:400');
 @import './common.scss';
 
 :root,
