--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -13,11 +13,15 @@
 
   p {
     font-family: $font-heading;
+    html[data-theme='light'] & {
+        font-family: $font-heading--light;
+    }
 
     @include from($tablet) {
       margin-left: 1rem;
     }
   }
+
 
   p:not(:last-of-type) {
     margin-bottom: $vertical-spacing;
@@ -40,6 +44,9 @@
 
   table {
     font-family: $font-heading;
+    html[data-theme='light'] & {
+        font-family: $font-heading--light;
+    }
     @include from($tablet) {
       margin-left: 1rem;
     }
@@ -47,6 +54,9 @@
 
   ul, ol {
     font-family: $font-heading;
+    html[data-theme='light'] & {
+        font-family: $font-heading--light;
+    }
 
     @include from($tablet) {
       margin-left: 2.2rem;
