--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -173,7 +173,7 @@
 }
 
 .gatsby-highlight-code-line {
-  background-color: rgba(var(--color-main), 0.3);
+  background-color: #291e2a;
   display: block;
   margin-right: -1em;
   margin-left: -1em;
