differentiated links a little more in light mode

--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -63,6 +63,12 @@
     }
   }
 
+  a {
+    html[data-theme='light'] & {
+        font-family: $font-heading;
+    }
+  }
+
   h2:not(:first-of-type) {
     margin-top: 2rem;
   }
